fix scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,3 +38,15 @@
 		}
 	}
 }
+
+@layer utilities {
+	/* Chrome, Safari and Opera */
+	.no-scrollbar::-webkit-scrollbar {
+		display: none;
+	}
+
+	.no-scrollbar {
+		-ms-overflow-style: none; /* IE and Edge */
+		scrollbar-width: none; /* Firefox */
+	}
+}
